Fixed Black caret not being white on dropups and then the caret going invivisible on BS3

--- a/src/scoutstrap-3.0.0/button-group.less
+++ b/src/scoutstrap-3.0.0/button-group.less
@@ -7,20 +7,18 @@
   .btn-grey &,
   .btn-black & {
     border-top-color: #fff;
-    border-top: #fff;
   }
 }
-.dropup {
-  .btn-purple &,
-  .btn-mauve &,
-  .btn-blue &,
-  .btn-green &,
-  .btn-orange &,
-  .btn-grey &,
-  .btn-black & {
+.btn-purple,
+.btn-mauve,
+.btn-blue,
+.btn-green,
+.btn-orange,
+.btn-grey,
+.btn-black {
+  .dropup &, {
   	.caret {
       border-bottom-color: #fff;
-      border-bottom: #fff;
     }
   }
 }
